# trading-simulator

./: .gitignore  CMakeLists.txt  README.md  batch_market_data.csv  dashboard_layout.json  line_chart.html  market_data.csv  market_data.xml  sample_chart.html  sample_chart.txt
cache_test/: TEST_0.cache
include/core/: lock_free_queue.h  memory_pool.h  thread_pool.h
include/data/: cache_manager.h  data_processor.h  market_data.h  yahoo_finance.h
include/visualization/: chart_renderer.h  dashboard.h  data_export.h
src/: CMakeLists.txt  main.cpp
src/analytics/: CMakeLists.txt
src/core/: CMakeLists.txt  memory_pool.cpp  thread_pool.cpp
src/data/: CMakeLists.txt  cache_manager.cpp  data_processor.cpp  yahoo_finance.cpp
src/strategies/: CMakeLists.txt
src/visualization/: CMakeLists.txt  chart_renderer.cpp  dashboard.cpp  data_export.cpp
tests/: CMakeLists.txt  basic_tests.cpp
